; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_GetPGVariableResultDesc.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/misc/extr_guc.c_GetPGVariableResultDesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"all\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"name\00", align 1
@TEXTOID = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [8 x i8] c"setting\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"description\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetPGVariableResultDesc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i64 @guc_name_compare(i8* %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %19

8:                                                ; preds = %1
  %9 = call i32 @CreateTemplateTupleDesc(i32 3)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @TEXTOID, align 4
  %12 = call i32 @TupleDescInitEntry(i32 %10, i32 1, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %11, i32 -1, i32 0)
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @TEXTOID, align 4
  %15 = call i32 @TupleDescInitEntry(i32 %13, i32 2, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i32 %14, i32 -1, i32 0)
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @TEXTOID, align 4
  %18 = call i32 @TupleDescInitEntry(i32 %16, i32 3, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i32 %17, i32 -1, i32 0)
  br label %27

19:                                               ; preds = %1
  %20 = load i8*, i8** %2, align 8
  %21 = call i32 @GetConfigOptionByName(i8* %20, i8** %4, i32 0)
  %22 = call i32 @CreateTemplateTupleDesc(i32 1)
  store i32 %22, i32* %3, align 4
  %23 = load i32, i32* %3, align 4
  %24 = load i8*, i8** %4, align 8
  %25 = load i32, i32* @TEXTOID, align 4
  %26 = call i32 @TupleDescInitEntry(i32 %23, i32 1, i8* %24, i32 %25, i32 -1, i32 0)
  br label %27

27:                                               ; preds = %19, %8
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @guc_name_compare(i8*, i8*) #1

declare dso_local i32 @CreateTemplateTupleDesc(i32) #1

declare dso_local i32 @TupleDescInitEntry(i32, i32, i8*, i32, i32, i32) #1

declare dso_local i32 @GetConfigOptionByName(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
